styles: fix no-content alignment

--- a/src/components/OurCars/styles.module.scss
+++ b/src/components/OurCars/styles.module.scss
@@ -56,9 +56,7 @@
   }
 }
 
-.openDrawerWrapper {
 
-}
 
 .notfoundcontainer {
   display: flex;
@@ -78,6 +76,14 @@
     padding-left: calc((88vw - 1200px) / 2);
     padding-right: calc((88vw - 1200px) / 2);
     margin: 0 2rem;
+  }
+}
+
+.openDrawerNotFound {
+   @media (min-width: 992px) {
+      padding-left: 2rem;
+      padding-right: 1rem;
+      margin-left: 25rem; 
   }
 }
 
